# gainy

./: .env  .env.dist  .env.global  .env.make  .env.test  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  extract_passwords.py  team-provider-info.json
src/aws/lambda-python/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/aws/lambda-python/lambda_python/: __init__.py  exceptions.py  get_recommended_collections.py  hasura_action.py  hasura_action_dispatcher.py  hasura_action_handler.py  hasura_handler.py  hasura_trigger_handler.py  models.py  set_user_categories.py  sqs_listener.py
src/aws/lambda-python/lambda_python/_stripe/: actions.py  api.py  models.py  repository.py  triggers.py
src/aws/lambda-python/lambda_python/actions/: __init__.py  apply_promocode.py  get_pre_signed_upload_form.py  get_promocode.py  rehandle_queue_messages.py  send_app_link.py  set_recommendation_settings.py  update_purchases.py  use_promocode.py  verification_send_code.py  verification_verify_code.py
src/aws/lambda-python/lambda_python/common/: __init__.py  context_container.py  exceptions.py  hasura_dispatcher.py  hasura_exception.py  hasura_function.py  hasura_response.py
src/aws/lambda-python/lambda_python/data_access/: lock.py  models.py  optimistic_lock.py  repository.py
src/aws/lambda-python/lambda_python/managed_portfolio/: __init__.py  models.py  repository.py  service.py
src/aws/lambda-python/lambda_python/metrics/: README.md  ranking_metrics.py
src/aws/lambda-python/lambda_python/models/: billing.py
src/aws/lambda-python/lambda_python/portfolio/: actions.py  exceptions.py  models.py  repository.py  service.py  triggers.py
src/aws/lambda-python/lambda_python/queue_processing/: abstract_message_handler.py  aws_message_handler.py  dispatcher.py  interfaces.py  locking_function.py  (+1 more)
src/gainy-fetch/tap-yfinance/: README.md  config.json.dist  pyproject.toml  tox.ini
src/gainy-fetch/tap-yfinance/tap_yfinance/: streams.py  tap.py
src/tap-eodhistoricaldata/: .gitignore  README.md  config.json  meltano.yml  pyproject.toml  tap-eodhistoricaldata.sh  tox.ini
src/tap-eodhistoricaldata/tap_eodhistoricaldata/: client.py  resolver.py  streams.py  tap.py
src/tap-eodhistoricaldata/tap_eodhistoricaldata/tests/: test_core.py
(+1441 files in other folders)
