[tool.poetry]
name = "lambda-python"
version = "0.1.0"
description = ""
authors = ["Mikhail Astashkevich <asmisha@tut.by>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
